--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==3.0.4
 cryptography==2.2.2
 Django==2.0.7
 django-celery-results==1.0.1
+django-widget-tweaks==1.4.2
 djangorestframework==3.8.2
 future==0.16.0
 idna==2.7
