--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==3.0.4
 cryptography==2.2.2
 Django==2.0.7
 django-celery-results==1.0.1
+django-excel==0.0.10
 django-widget-tweaks==1.4.2
 djangorestframework==3.8.2
 future==0.16.0
@@ -17,6 +18,7 @@ Jinja2==2.10
 jtextfsm==0.3.1
 junos-eznc==2.1.8
 kombu==4.2.1
+lml==0.0.1
 lxml==4.2.3
 MarkupSafe==1.0
 napalm==2.3.1
@@ -28,6 +30,11 @@ psycopg2==2.7.5
 pyasn1==0.4.3
 pycparser==2.18
 pyeapi==0.8.2
+pyexcel==0.5.8
+pyexcel-io==0.5.7
+pyexcel-webio==0.1.4
+pyexcel-xlsxr==0.5.0
+pyexcel-xlsxw==0.4.2
 pyIOSXR==0.53
 PyNaCl==1.2.1
 pynxos==0.0.3
@@ -40,5 +47,7 @@ requests==2.19.1
 scp==0.11.0
 six==1.11.0
 textfsm==0.4.1
+texttable==1.4.0
 urllib3==1.23
 vine==1.1.4
+XlsxWriter==0.9.3
