--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,10 @@ django-celery-results==1.0.1
 django-excel==0.0.10
 django-widget-tweaks==1.4.2
 djangorestframework==3.8.2
+et-xmlfile==1.0.1
 future==0.16.0
 idna==2.7
+jdcal==1.4
 Jinja2==2.10
 jtextfsm==0.3.1
 junos-eznc==2.1.8
@@ -25,6 +27,7 @@ napalm==2.3.1
 ncclient==0.6.0
 netaddr==0.7.19
 netmiko==2.1.1
+openpyxl==2.5.4
 paramiko==2.4.1
 psycopg2==2.7.5
 pyasn1==0.4.3
@@ -33,6 +36,8 @@ pyeapi==0.8.2
 pyexcel==0.5.8
 pyexcel-io==0.5.7
 pyexcel-webio==0.1.4
+pyexcel-xls==0.5.7
+pyexcel-xlsx==0.5.6
 pyexcel-xlsxr==0.5.0
 pyexcel-xlsxw==0.4.2
 pyIOSXR==0.53
@@ -50,4 +55,6 @@ textfsm==0.4.1
 texttable==1.4.0
 urllib3==1.23
 vine==1.1.4
+xlrd==1.1.0
 XlsxWriter==0.9.3
+xlwt==1.3.0
