--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ celery==4.2.0
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
-cryptography==2.3
+cryptography==2.2.2
 Django==2.0.7
 django-celery-results==1.0.1
+django-easy-audit==1.0
 django-excel==0.0.10
 django-widget-tweaks==1.4.2
 djangorestframework==3.8.2
